Fix home page on safari

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,3 +19,8 @@
 .link {
   color: #eeeeee;
 }
+
+.text-footer {
+  padding-left: 4%;
+  padding-right: 4%;
+}
